# 2.5d-maze-renderer

./: .gitignore  Cargo.toml  README.md  Web.toml
maze/: Cargo.toml  README.md
maze/src/: gen.rs  grid.rs  lib.rs  main.rs  solve.rs
maze/src/solve/: dijkstra.rs
src/: camera.rs  camera2d.rs  camera3d.rs  entity.rs  game.rs  light_cache.rs  lighting.rs  log.rs  main.rs  map.rs  map_builder.rs  material.rs  maze_world.rs  mth.rs  new_world.rs  player.rs  ray.rs  shelf.rs  world.rs  world_data.rs  world_gen.rs  wrappers.rs
static/: index.html
web/: index.html
