[package]
name = "mazerender2d"
description = "mazerender2d"
version = "1.0.0"
authors = ["LukeGrahamLandry"]
edition = "2021"

[dependencies]
maze = { path = "maze", version = "0.1.0" }
instant = { git = "https://github.com/hoodmane/instant.git", branch = "emscripten-no-leading-underscore" }

[dependencies.sdl2]
version = "0.35"