[package]
name = "mazerender2d"
description = "mazerender2d"
version = "1.0.0"
authors = ["LukeGrahamLandry"]
edition = "2021"

[dependencies]
maze = { path = "maze", version = "0.1.0" }
instant = { git = "https://github.com/hoodmane/instant.git", branch = "emscripten-no-leading-underscore" }
winit = "0.28.6"
softbuffer = "0.3.0"

[profile.release]
lto = true
panic = "abort"
strip = true