[package]
name = "mazerender2d"
description = "mazerender2d"
version = "1.0.0"
authors = ["LukeGrahamLandry"]
edition = "2021"

[dependencies]
maze = { path = "maze", version = "0.1.0" }
winit = "0.28.6"
softbuffer = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version="0.3.64", features=["Window", "HtmlElement"]}
wasm-bindgen = "0.2.87"

[profile.release]
lto = true
panic = "abort"
strip = true
#strip = "debuginfo"  # gives stack traces on panic but slightly bigger